Landing Page: Finalizado

--- a/index.html
+++ b/index.html
@@ -104,21 +104,31 @@
         </div>
         <img src="./images/Notebook.png" alt="Plataforma Web">
       </div>
-
-      <div class="dual" id="visao" style="margin-top: 200px;">
-        <img src="./images/ia.gif" alt="UA">
-        <div class="text">
-          <h3>Visão Computacional</h3>
-          <p>
-            A visão computacional é como dar olhos inteligentes às máquinas.
-            Nosso sistema usa essa tecnologia para monitorar ambientes industriais 24 horas por dia,
-            identificando automaticamente quando alguém está sem capacete.
-            É como ter um supervisor de segurança sempre atento,
-            transformando câmeras comuns em guardiões contra acidentes.</p>
-        </div>
-      </div>
     </section>
   </div>
+
+  <div class="full-white-section" id="visao">
+  <div class="container">
+    <h2 class="section-title">Visão Computacional</h2>
+    <p class="section-description">
+      Nossa tecnologia de visão computacional oferece detecção precisa e em tempo real
+      da utilização de EPIs, garantindo conformidade com as normas de segurança.
+    </p>
+    <div class="dual">
+      <img src="./images/ia.gif" alt="Detecção por IA">
+      <div class="text">
+        <h3>Detecção de EPI - Análise de IA</h3>
+        <p>
+          A visão computacional é como dar olhos inteligentes às máquinas.
+          Nosso sistema usa essa tecnologia para monitorar ambientes industriais 24 horas por dia,
+          identificando automaticamente quando alguém está sem capacete.
+          É como ter um supervisor de segurança sempre atento,
+          transformando câmeras comuns em guardiões contra acidentes.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
 
   <footer>
     <div class="footer-content">
@@ -129,10 +139,10 @@
       <div class="footer-section">
         <h4>Links Rápidos</h4>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Tecnologias</a></li>
-          <li><a href="#">Serviços</a></li>
-          <li><a href="#">Visão Computacional</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#tecnologia">Tecnologias</a></li>
+          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#visao">Visão Computacional</a></li>
         </ul>
       </div>
       <div class="footer-section">
