--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <div class="nav">
-      <img src="./images/logo.png" alt="Logo Vigillatus">
+      <img src="./images/Logo.png" alt="Logo Vigillatus">
       <nav>
         <a href="#home">Home</a>
         <a href="#tecnologia">Tecnologias</a>
